Fixed header alignment on mobile devicxes.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,8 +8,9 @@ header {
     /* padding: 25px 0; */
     background-color: lightgrey;
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
-    align-items: end;
+    align-items: center;
     color: #555555;
 }
 
@@ -114,6 +115,11 @@ footer {
 @media screen and (min-width: 768px) {
     .card-column.rest {
         max-width: 50%;
+    }
+
+    header {
+        flex-direction: row;
+        align-items: end;
     }
 }
 
